# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aqua"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hecs = "0.7.6"
pollster = "0.2.5"
cfg-if = "1.0.0"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.17"
wgpu = "0.12"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
anyhow = "1.0.57"
cgmath = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.12.0", features = ["webgl"]}
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.image]
version = "0.24.2"
default-features = true
features = ["png", "jpeg"]
