# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aqua"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hecs = "0.7.6"
pollster = "0.2.5"
cfg-if = "1.0.0"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.17"
wgpu = "0.12"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
anyhow = "1.0.57"
cgmath = "0.18.0"
tobj = { version = "3.2.2", features = [
    "async",
]}

[dependencies.image]
version = "0.24.2"
default-features = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.57"
fs_extra = "1.2.0"
glob = "0.3.0"
